Mapstruct implementation to reduce boiler plate code